# MarketPlace

./: README.md  catalog.html  category.html  contacts.html  main.html  main.py  pyproject.toml
catalog/: urls.py
catalog/templates/: home.html
catalog/templates/contacts/: contacts.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_baseproduct_py.html  z_145eef247bfb46b6_category_iterator_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_lawngrass_py.html  z_145eef247bfb46b6_mixinprint_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html
src/: baseproduct.py  category.py  category_iterator.py  lawngrass.py  mixinprint.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_product.py
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_baseproduct_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_lawngrass_py.html  z_145eef247bfb46b6_mixinprint_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html
